--- a/curso-javascript/aula1.html
+++ b/curso-javascript/aula1.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 	<head>
-		<title>Aula 1</title>
 		<meta charset="utf-8">
+		
+		<title>Aula 1</title>
 	
-			<!-- o que estiver dentro dessa tag, será interpretado como JavaScrip-->
-		<!--
-		<script type="text/javascript">
-			alert('Teste de inclusão de JavaScript')
-
-		</script>-->
-		<script  language="javasript" scr="meu javascript.js"></script>
-
+			<!-- o que estiver dentro dessa tag, será interpretado como JavaScrip
+			<script type="text/javascript">
+				alert('Teste de inclusão de JavaScript')
+			</script>-->
+		
+		
+		<script  language="javascript" src="meu_javascript.js"></script>
+	
 	</head>
 	<body>
 
