eventos e projeto calculadora

--- a/curso-javascript/for.html
+++ b/curso-javascript/for.html
@@ -7,8 +7,11 @@
 
 		<script type="text/javascript">
 			
-			for(variavel; condicao; incremento) {
-				
+			for(var x = 1; x < 11 ; x++) {
+				document.write(x + '<br />');
+
+				//break;
+				//contiue
 			}
 		</script>
 
